<?xml version="1.0"?>

<package format="2">

  <name>example_launch_package</name>
  <version>0.1.0</version>
  <description>Example Package.</description>

  <license>Proprietary</license>

  <author email="marcot@ethz.ch.com">Marco Tranzatto</author>
  <maintainer email="marcot@ethz.ch.com">Marco Tranzatto</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
